k8s/ingress/traefik/canary/appv1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appv1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appv1
  template:
    metadata:
      labels:
        app: appv1
        use: test
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: portv1

---

apiVersion: v1
kind: Service
metadata:
  name: appv1
spec:
  type: ClusterIP
  selector:
    app: appv1
  ports:
  - name: whoami
    port: 80
    targetPort: 80
