k8s/ingress/traefik/canary/traefikservice-base.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: canary-wrr
spec:
  endPoints:
  - web
  routes:
  - match: Host(`who.zjqi.top`)
    kind: Rule
    services:
    - kind: TraefikService
      name: traefiksvc-wrr
